// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mealsGroupByDaySelector should return array grouped by days for state with meals and with filter 1`] = `
Array [
  Object {
    "date": "2017-06-11T21:00:00.000Z",
    "meals": Array [
      Object {
        "_id": "593e42829c0897020c694a77",
        "calories": 12,
        "createdAt": "2017-06-12T07:28:02.686Z",
        "date": "2017-06-12T06:00:00.000Z",
        "id": "bdc20331-1f8d-46f4-8c2a-a2cf19ff4c69",
        "meal": "myMeal",
        "updatedAt": "2017-06-12T07:28:02.686Z",
        "userEmail": "admin@mail.com",
        "userId": "9e65644e-e326-48d9-be7d-7d13f8b36992",
      },
    ],
  },
]
`;

exports[`mealsGroupByDaySelector should return array grouped by days for state with meals and without filter 1`] = `
Array [
  Object {
    "date": "2017-06-13T21:00:00.000Z",
    "meals": Array [
      Object {
        "_id": "59412ee30b48971457fd3fb3",
        "calories": 87,
        "createdAt": "2017-06-14T12:41:07.089Z",
        "date": "2017-06-14T12:40:00.000Z",
        "id": "97852ec8-6094-4773-9f48-dbf13d202f22",
        "meal": "food",
        "updatedAt": "2017-06-14T12:41:07.089Z",
        "userEmail": "admin@mail.com",
        "userId": "9e65644e-e326-48d9-be7d-7d13f8b36992",
      },
    ],
  },
  Object {
    "date": "2017-06-11T21:00:00.000Z",
    "meals": Array [
      Object {
        "_id": "593e42829c0897020c694a77",
        "calories": 12,
        "createdAt": "2017-06-12T07:28:02.686Z",
        "date": "2017-06-12T06:00:00.000Z",
        "id": "bdc20331-1f8d-46f4-8c2a-a2cf19ff4c69",
        "meal": "myMeal",
        "updatedAt": "2017-06-12T07:28:02.686Z",
        "userEmail": "admin@mail.com",
        "userId": "9e65644e-e326-48d9-be7d-7d13f8b36992",
      },
    ],
  },
]
`;

exports[`mealsGroupByDaySelector should return empty array for state with empty meals 1`] = `Array []`;
